--- a/desafios/modulo-02/d012/index.html
+++ b/desafios/modulo-02/d012/index.html
@@ -28,7 +28,7 @@
 
     
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes<br>
             É tudo abreviado<br>
@@ -65,7 +65,7 @@
 
   
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas<br>
             Escritas com a própria mão<br>
@@ -101,7 +101,7 @@
     </section>
 
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://gustavoguanabara.github.io" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a></p>
     </footer>
 </body>
 </html>
