--- a/exercicios/modulo-03/ex023/tabela001.html
+++ b/exercicios/modulo-03/ex023/tabela001.html
@@ -38,9 +38,9 @@
     <table>
         
         <tr> <!--primeira linha-->
-            <td>NOME</td>
-            <td>IDADE</td>
-            <td>CIDADE</td>
+            <th>NOME</th>
+            <th>IDADE</th>
+            <th>CIDADE</th>
         </tr>
         <tr class="linha">
             <td>ANA</td>
