--- a/exercicios/modulo-03/ex023/tabela006.html
+++ b/exercicios/modulo-03/ex023/tabela006.html
@@ -24,6 +24,7 @@
             background-color: #888888;
             border-radius: 10px;
             box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.432);
+            overflow-x: auto;
         }
         table {
             border-collapse: collapse;
