--- a/exercicios/modulo-04/ex024/paginas-extras/pag001.html
+++ b/exercicios/modulo-04/ex024/paginas-extras/pag001.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio</title>
-    style>
+    <title>site de teste</title>
+    <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
             background-color: #323232;
@@ -36,7 +36,7 @@
             padding: 5px;
         }
         .header {
-            background<-color: #323232;
+            background-color: #323232;
             color: white;
         }
         .header > th {
@@ -110,6 +110,5 @@
             </tbody>
         </table>
     </section>
-    
 </body>
 </html>
