--- a/exercicios/modulo-04/ex025/form001.html
+++ b/exercicios/modulo-04/ex025/form001.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <h1>Meu primeiro formulário</h1>
-        <form action="cadastro.php" method="post">
+        <form action="cadastro.js" method="post">
             <p>
                 <label for="inome">Nome:</label>
                 <input type="text" name="nome" id="inome" autocomplete="off"></p>
@@ -24,3 +24,4 @@
         </form>
     </body>
 </html>
+
