--- a/exercicios/modulo-04/ex025/form003.html
+++ b/exercicios/modulo-04/ex025/form003.html
@@ -14,26 +14,29 @@
 <body>
     <h1>Teste de Formulario</h1>
     <form action="cadastro.js">
-        <p>
-            <label for="inome">Nome</label>
-            <input type="text" name="nome" id="inome" required maxlength="30" placeholder="Nome completo" autocomplete="name">
-        </p>
-        <p>
-            <label for="imedia">Média</label>
-            <input type="number" name="media" id="imedia" min="0" max="10" placeholder="0 a 10" step="0.1" required >
-        </p>
-        <p>
-            <label for="imes">Periodo</label>
-            <input type="month" name="mes" id="imes" value="2022-11">
-        </p>
-        <p>
-            <label for="idia">Dia de prova</label>
-            <input type="date" name="dia" id="idia" value="2022-11-28">
-        </p>
-        <p>
-            <input type="submit" value="Enviar">
-            <input type="reset" value="Limpar">
-        </p>
+        <fieldset>
+            <legend>Dados do aluno</legend>
+            <p>
+                <label for="inome">Nome</label>
+                <input type="text" name="nome" id="inome" required maxlength="30" placeholder="Nome completo" autocomplete="name">
+            </p>
+            <p>
+                <label for="imedia">Média</label>
+                <input type="number" name="media" id="imedia" min="0" max="10" placeholder="0 a 10" step="0.1" required >
+            </p>
+            <p>
+                <label for="imes">Periodo</label>
+                <input type="month" name="mes" id="imes" value="2022-11">
+            </p>
+            <p>
+                <label for="idia">Dia de prova</label>
+                <input type="date" name="dia" id="idia" value="2022-11-28">
+            </p>
+            <p>
+                <input type="submit" value="Enviar">
+                <input type="reset" value="Limpar">
+            </p>
+        </fieldset>
 
     </form>
 </body>
